@@ -404,6 +404,7 @@ ags_audio_unset_behaviour_flags
 ags_audio_test_staging_flags
 ags_audio_set_staging_flags
 ags_audio_unset_staging_flags
+ags_audio_find_name
 ags_audio_set_max_audio_channels
 ags_audio_set_max_pads
 ags_audio_set_audio_channels
@@ -1013,6 +1014,8 @@ ags_set_samplerate_get_type
 ags_set_samplerate_new
 ags_apply_bpm_get_type
 ags_apply_bpm_new
+ags_apply_sound_config_get_type
+ags_apply_sound_config_new
 ags_open_sf2_sample_get_type
 ags_open_sf2_sample_new
 ags_start_soundcard_get_type
@@ -1669,6 +1672,15 @@ ags_osc_meter_controller_get_type
 ags_osc_meter_controller_test_flags
 ags_osc_meter_controller_set_flags
 ags_osc_meter_controller_unset_flags
+ags_osc_meter_controller_monitor_alloc
+ags_osc_meter_controller_monitor_free
+ags_osc_meter_controller_monitor_ref
+ags_osc_meter_controller_monitor_unref
+ags_osc_meter_controller_monitor_find_path
+ags_osc_meter_controller_monitor_find_port
+ags_osc_meter_controller_add_monitor
+ags_osc_meter_controller_remove_monitor
+ags_osc_meter_controller_contains_monitor
 ags_osc_meter_controller_start_monitor
 ags_osc_meter_controller_stop_monitor
 ags_osc_meter_controller_monitor_meter
